data/raw_logs/syntactic/syn_26.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_26.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_26.c:1:33: error: expected ')' before ';' token
    1 | int main() { int x = 5 + (10 * 2; }
      |                          ~      ^
      |                                 )
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_26.c:1:35: error: expected ',' or ';' before '}' token
    1 | int main() { int x = 5 + (10 * 2; }
      |                                   ^
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_26.c:1:35: error: expected declaration or statement at end of input
